--- a/app/views/quiz/question.html.erb
+++ b/app/views/quiz/question.html.erb
@@ -8,7 +8,7 @@
 <h1>Question <%= @current + 1 %> of <%= @total %></h1>
 <p id="question"><%= @question.text %></p>
 
-<%= form_tag({:controller => "quiz", :action => "answer"}) do %>
+<%= form_tag({:controller => "quiz", :action => "question"}) do %>
   <% @choices.each do |choice| %>
 	 <p class="choice">
 		<%= radio_button_tag(:choice, choice.id) %>
