--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,21 +12,39 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+      </script>
+  <![endif]-->
 </head>
+
 <body>
 
-<div id="main">
-  <%= yield %>
+<!--<header class="navbar navbar-fixed-top navbar-inverse">-->
+<!--  <div class="container">-->
+<!--    <%= link_to "Quiz App", '#', id: "logo" %>-->
+<!--        <nav>-->
+<!--          <ul class="nav navbar-nav navbar-right">-->
+<!--            <li><%= link_to "Home",   '#' %></li>-->
+<!--            <li><%= link_to "Help",   '#' %></li>-->
+<!--            <li><%= link_to "Log in", '#' %></li>-->
+<!--          </ul>-->
+<!--        </nav>-->
+<!--  </div>-->
+<!--</header>-->
+    
+  <div class="container">
+      <%= yield %>
+  </div>
   
   <hr />
+  
   <div id="footer">
-	 <p>
-		Project for Diploma in Software Development RAD Cluster |
-		Created by <a href="http://www.linkedin.com/hp/?dnr=ShwMA1rHS4LMpW8oClb3AfuHSsLmmgSHeXE">Suruchi Bapat</a>
-	 </p>
+	  <p>
+		  Project for Diploma in Software Development RAD Cluster |
+		  Created by <a href="http://www.linkedin.com/hp/?dnr=ShwMA1rHS4LMpW8oClb3AfuHSsLmmgSHeXE">Suruchi Bapat</a>
+    </p>
   </div>
-</div>
-
 
 
 </body>
