--- a/app/views/quiz/index.html.erb
+++ b/app/views/quiz/index.html.erb
@@ -9,8 +9,8 @@
 
 <%= form_tag({:controller => "quiz",
 				  :action => "start"}) do %>
-  <p><%= label_tag(:number, "How many questions do you want in the quiz?", :id => "question") %></p>
-  <p class="center"><%= select_tag(:number, options_for_select((1..10).map {|x| [x, x]}), :id => "count") %> <br /></p>
+  <!--<p><%= label_tag(:number, "How many questions do you want in the quiz?", :id => "question") %></p>-->
+  <!--<p class="center"><%= select_tag(:number, options_for_select((1..10).map {|x| [x, x]}), :id => "count") %> <br /></p>-->
   
   <div class="center">
 	 <%= submit_tag "Start !", :class => "submit"%>
