--- a/app/views/quiz/question.html.erb
+++ b/app/views/quiz/question.html.erb
@@ -8,22 +8,21 @@
 <h1>Question <%= @current + 1 %> of <%= @total %></h1>
 <p id="question"><%= @question.text %></p>
 
-<%= form_tag({:controller => "quiz", :action => "question"}) do %>
+<%= form_tag({:controller => "quiz", :action => "answer"}) do %>
   <% @choices.each do |choice| %>
 	 <p class="choice">
 		<%= radio_button_tag(:choice, choice.id) %>
 		<%= label_tag("choice_".concat(choice.id.to_s).to_sym, choice.text) %>
 	 </p>
   <% end %>
-
+  
   <div class="center">
 	 <%= submit_tag("Continue", :class => "submit") %>
   </div>
-
-    <% content_for(:title) do %>
-        Question <%= @current + 1 %> of <%= @total %>
-    <% end %>
 <% end %>
 
+<% content_for(:title) do %>
+  Question <%= @current + 1 %> of <%= @total %>
+<% end %>
 
 
