--- a/app/views/quiz/index.html.erb
+++ b/app/views/quiz/index.html.erb
@@ -1,8 +1,9 @@
 <!--
-# TAFE, 29 April, 2015.
+# TAFE, 12 June, 2015.
 # Ruby Source File
 # Activity::  Final Project: Quiz App
 # Author::   041504258 Suruchi Bapat
+# Author::   041502996 Dillon O'Dwyer
 -->
 
 <html>
@@ -21,23 +22,20 @@
       <section>
           <h1>Quiz Details: </h1>
           
-          <p id="coursename"><%= "Course Name: " %> <%= "ICA50711 Diploma of Software Development" %></p>
-          <p id="clustername"><%= "Cluster Name: " %> <%= "RD - Rapid Application Development Cluster" %></p>
-          <p id="quizid"><%= "Quiz ID: " %> <%= "RD01" %></p>
-          <p id="quiztitle"><%= "Quiz Title: " %> <%= "Ruby on Rails Quiz" %></p>
-          <p id="questioncount"><%= "Number of questions: " %> <%= "20" %></p>
-          <p id="quizdate"><%= "Date: " %> <%= Time.now.strftime("%d/%m/%Y") %></p>
+          <p id="quizName"><%= @quizTitle %></p>
+          <p id="clusterName"><%= "Cluster: " %> <%= @clusterTitle %></p>
+          <p id="lecturerName"><%= "By: " %> <%= @lecturer %></p>
+          <p id="timerLength"><%= "Duration: " %> <%= @timer %> <%= " Minutes" %> </p>
+          <p id="questionCount"><%= "Questions: " %> <%= @total %></p>
           
           
       </section>
 
-      <%= form_tag({:controller => "quiz", :action => "start"}) do %>
+      <%= form_tag({:controller => "quiz", :action => "question"}) do %>
       <div class="center">
 	         <%= submit_tag "Start !", :class => "submit"%>
       </div>
       <% end %>
-
-
 
 </body>
 </html>
